--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -605,3 +605,52 @@ h1.question{
   color:#fff;
   padding: 10px 20px;
 }
+
+.welcome_image{
+  width:50vw;
+  margin:10vh auto;
+}
+
+.chevron_container{
+  width:100%;
+  display:flex;
+}
+
+.img_responsive{
+  width:100%;
+  height:auto;
+  vertical-align: bottom;
+}
+
+.chevron_input {
+  display:flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding:0 1vw;
+
+}
+
+.input_copy{
+  width:100%;
+  text-transform: uppercase;
+  color:#f60;
+  text-align:center;
+  margin-bottom: -20px;
+}
+
+.chevron_input input{
+  width:80%;
+  height:40px;
+} 
+.chevron_input a{
+  width:20%;
+  color:#fff;
+  background:#f60;
+  height:40px;
+  line-height:40px;
+  text-align:center;
+  text-transform: uppercase;
+  text-decoration: none;
+
+
+}
