--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -608,11 +608,30 @@ h1.question{
 .welcome_image{
   width:50vw;
   margin:10vh auto;
+  max-width:600px
 }
 
 .chevron_container{
   width:100%;
   display:flex;
+  justify-content: space-between;
+}
+
+
+.chevron_right{
+  background: url('/../../chevron_right.png');
+  background-position: left;
+  
+}
+.chevron_left{
+  background: url('/../../chevron_left.png');
+  background-position: right;
+}
+
+.chevron {
+  width:calc((100% - 240px) / 2);
+  background-size:cover;
+  height:102px;
 }
 
 .img_responsive{
@@ -620,11 +639,13 @@ h1.question{
   height:auto;
 }
 
+
 .chevron_input {
   display:flex;
   flex-wrap: wrap;
   justify-content: center;
   padding:0 1vw;
+  width: 220px;
 
 }
 
@@ -705,7 +726,7 @@ display:inline-block;
 .nav_links li{
   list-style:none;
   display:inline-block;
-  padding: 0 20px;
+  padding: 0 2vw;
 
 }
 
@@ -723,7 +744,7 @@ display:inline-block;
   background-size:cover;
   width:100%;
   height:90vh;
-  background-position: bottom;
+  background-position: center bottom;
 
 }
 .overview_section{
@@ -731,7 +752,7 @@ display:inline-block;
   background-size:cover;
   width:100%;
   height:90vh;
-  background-position: bottom;
+  background-position: center bottom;
 }
 
 .copy_container{
@@ -746,7 +767,7 @@ display:inline-block;
   background-size:cover;
   width:100%;
   height:90vh;
-  background-position: bottom;
+  background-position: left bottom;
   display:flex;
   justify-content: space-evenly;
   align-items:center;
