--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,7 +1,7 @@
 html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
-  font: 112.5%/1.45em georgia, serif, sans-serif;
+  font: 112.5%/1.45em 'Roboto', sans-serif;
   box-sizing: border-box;
   overflow-y: scroll;
 }
@@ -10,7 +10,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: hsla(0, 0%, 0%, 0.8);
-  font-family: georgia, serif;
+  font-family: 'Roboto', sans-serif;
   font-weight: normal;
   word-wrap: break-word;
   font-kerning: normal;
@@ -259,8 +259,7 @@ h2 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family:'Roboto Condensed', sans-serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 1.62671rem;
@@ -820,6 +819,7 @@ display:inline-block;
   background-position: center bottom;
   background-repeat: no-repeat;
   height:100vh;
+  font-family: 'Arial';
 
 }
 .table-wrapper{
@@ -847,9 +847,11 @@ display:inline-block;
 }
 
 .fl-table thead th {
-  color: orange;
+  color: #f60;
+  font-family:'Roboto', sans-serif;
+  font-weight:400;
   border-top:1px solid black;
-  border-bottom:1px solid orange;
+  border-bottom:1px solid #f60;
   border-left:1px solid black;
   border-right:1px solid black;
   
@@ -858,7 +860,7 @@ display:inline-block;
 
 /* .fl-table thead th:nth-child(odd) {
   border-top:1px solid black;
-  border-bottom:1px solid orange;
+  border-bottom:1px solid #f60;
   border-left:1px solid black;
   border-right:1px solid black;
 
@@ -867,20 +869,20 @@ display:inline-block;
 
 .fl-table tr:nth-child(even) {
   border-top:1px solid black;
-  border-bottom:1px solid orange;
+  border-bottom:1px solid #f60;
   border-left:1px solid black;
   border-right:1px solid black;
 } */
 tbody td{
-  border-left:1px solid orange;
-  border-right:1px solid orange;
+  border-left:1px solid #f60;
+  border-right:1px solid #f60;
 }
 
 tbody tr:last-child td{
-  border-bottom:1px solid orange;
+  border-bottom:1px solid #f60;
 }
 
 tbody tr:nth-child(odd){
-  background:gray;
+  background:#414042;
 }
 
