--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -472,6 +472,8 @@ table {
     line-height: 1.45rem;
     border-collapse: collapse;
     width: 100%;
+    table-layout: fixed;
+
 }
 
 blockquote {
@@ -617,7 +619,6 @@ thead {
 td,
 th {
     text-align: left;
-    border-bottom: 1px solid hsla(0, 0%, 0%, 0.12);
     font-feature-settings: "tnum";
     -moz-font-feature-settings: "tnum";
     -ms-font-feature-settings: "tnum";
@@ -626,6 +627,7 @@ th {
     padding-right: 0.96667rem;
     padding-top: 0.725rem;
     padding-bottom: calc(0.725rem - 1px);
+    border: 1px solid transparent;
 }
 
 th:first-child,
@@ -906,6 +908,15 @@ h1.question {
     background-attachment: fixed;
 }
 
+.body_home{
+    background: url('/../../body_bg.jpg');
+    background-size: cover;
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    font-family: 'Arial';
+    background-attachment: fixed;
+}
+
 .body_ledger .fl-table {
     /* max-width:calc(100vw - 80px);
   overflow-x: scroll;
@@ -923,6 +934,12 @@ h1.question {
     left: 0;
     background: black;
     border-bottom: 1px solid #f60;
+    width:250px;
+ 
+}
+
+.body_ledger .fl-table tr:nth-child(odd) td:first-child{
+    background: #414042;
 }
 
 .table-wrapper {
@@ -934,7 +951,6 @@ h1.question {
     border-collapse: initial!important;
     width: 100%;
     max-width: 100%;
-    white-space: nowrap;
     color: white;
 }
 
@@ -1096,7 +1112,7 @@ h3.question {
     .hamburger.is-active .hamburger-inner,
     .hamburger.is-active .hamburger-inner::before,
     .hamburger.is-active .hamburger-inner::after {
-        background-color: #000;
+        background-color: #fff;
     }
     .hamburger-box {
         width: 40px;
@@ -1114,7 +1130,7 @@ h3.question {
     .hamburger-inner::after {
         width: 40px;
         height: 4px;
-        background-color: #000;
+        background-color: #fff;
         border-radius: 4px;
         position: absolute;
         transition-property: transform;
