--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -854,7 +854,7 @@ h1.question {
     background: url('/../../place_bets_bg.jpg');
     background-size: cover;
     width: 100%;
-    height: 90vh;
+    height: 100vh;
     background-position: bottom;
 }
 
@@ -1070,6 +1070,7 @@ h3.question {
         top: 0;
         left: 0;
         display: inline-block;
+        z-index:1;
     }
     .show.nav_links ul {
         text-align: center;
@@ -1107,6 +1108,7 @@ h3.question {
         border: 0;
         margin: 0;
         overflow: visible;
+        z-index: 2;
     }
     .hamburger:hover {
         opacity: 0.7;
