--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -880,23 +880,26 @@ h1.question {
 }
 
 .active a {
-    color: #f60;
+    color: #f60!important;
 }
 
 .nav_links a.active {
-    color: #f60;
+    color: #f60!important;
 }
 
 
 /* Table CSS */
 
 .body_ledger {
-    background: url('/../../black_and_white_football.jpg');
+    background: url('/../../leaderboard_bg.jpg');
     background-size: cover;
     background-position: center bottom;
     background-repeat: no-repeat;
     font-family: 'Arial';
     background-attachment: fixed;
+}
+.ledger_table{
+    padding-bottom:20vh;
 }
 
 .body_leaderboard {
@@ -1055,7 +1058,7 @@ h3.question {
     display: none;
 }
 
-@media only screen and (max-width: 780px) {
+@media only screen and (max-width: 900px) {
     .desktop_nav {
         display: none!important;
     }
@@ -1237,7 +1240,7 @@ h3.question {
         padding: 40px 0 40px 0;
     }
 
-    .fixed_nav{
+    .fixed_nav, .alt_nav{
     background: -moz-linear-gradient(left, rgba(0, 0, 0, 0) 60%, rgba(0, 0, 0, 0.65) 100%);
     background: -webkit-linear-gradient(left, rgba(0, 0, 0, 0) 60%, rgba(0, 0, 0, 0.65) 100%);
     background: linear-gradient(to right, rgba(0, 0, 0, 0) 60%, rgba(0, 0, 0, 0.65) 100%);
