--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -305,6 +305,7 @@ h2 {
     text-rendering: optimizeLegibility;
     font-size: 1.62671rem;
     line-height: 1.1;
+    text-transform: uppercase;
 }
 
 h3 {
@@ -545,6 +546,7 @@ dt {
 
 th {
     font-weight: bold;
+    text-transform: uppercase;
 }
 
 li {
@@ -787,7 +789,7 @@ h1.question {
     background: -moz-linear-gradient(left, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.65) 100%);
     background: -webkit-linear-gradient(left, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.65) 100%);
     background: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.65) 100%);
-    width: 60vw;
+    width: 75vw;
     height: 65px;
     display: inline-block;
 }
@@ -800,16 +802,22 @@ h1.question {
 .nav_links li {
     list-style: none;
     display: inline-block;
-    padding: 0 2vw;
+    padding: 0 20px;
 }
 
 .nav_links a {
     color: #fff;
     font-family: 'Arial', sans-serif;
     line-height: 65px;
-    font-size: 1.25vw;
+    font-size: 16px;
     text-decoration: none;
     text-transform: uppercase;
+}
+ 
+@media only screen and (max-width: 1250px) {
+    .nav_links a {
+    font-size: 16px;
+    }
 }
 
 .intro_section {
@@ -817,7 +825,7 @@ h1.question {
     background-size: cover;
     width: 100%;
     height: 90vh;
-    background-position: center bottom;
+    background-position: center top;
 }
 
 .overview_section {
@@ -860,6 +868,9 @@ h1.question {
     width: 100%;
     height: 100vh;
     background-position: bottom;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
 
 .button_container {
@@ -1099,11 +1110,30 @@ h3.question {
     justify-content: space-between;
     align-items: center;
 }
-
+.confirm_bets{
+    text-align: center;
+}
 .confirm_container h3.question{
     width:100%
 }
 
+.confirm_bets input{
+    background: #f60;
+    padding:20px;
+    color:#fff;
+    font-size:30px;
+    border:none;
+    text-transform: uppercase;
+    font-weight:300;
+    transition: all .5 sec;
+    border-style:double;
+    border: 7px double #fff;
+
+}
+
+.confirm_bets input:hover{
+    background: #e55b00;
+}
 
 @media only screen and (max-width: 900px) {
     .desktop_nav {
